# rCore

./: README.md  rust-toolchain.toml
os/: .gitignore  Cargo.toml  Makefile  build.rs
os/src/: batch.rs  config.rs  console.rs  entry.asm  lang_items.rs  linker-qemu.ld  linker.ld  loader.rs  logging.rs  main.rs  sbi.rs  timer.rs
os/src/boards/: qemu.rs
os/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_table.rs
os/src/syscall/: fs.rs  mod.rs  process.rs
os/src/task/: context.rs  mod.rs  switch.rs  task.rs
os/src/trap/: context.rs  mod.rs
user/: .gitignore  Makefile  build.py
user/src/: console.rs  lib.rs  syscall.rs
